--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.26.1",
+    "autoprefixer": "^10.1.0",
+    "gatsby": "^2.29.2",
     "gatsby-cli": "^2.16.2",
+    "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "postcss": "^8.2.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
@@ -27,7 +30,8 @@
     "gatsby-plugin-emotion": "^5.1.0",
     "prettier": "2.2.1",
     "tailwindcss": "^2.0.2",
-    "twin.macro": "^2.0.7"
+    "twin.macro": "^2.0.7",
+    "typescript": "^4.1.3"
   },
   "repository": {
     "type": "git",
