--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "gatsby": "^2.29.2",
     "gatsby-cli": "^2.16.2",
