--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "gatsby": "^2.29.2",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@types/react": "^17.0.0",
     "gatsby-plugin-emotion": "^5.1.0",
     "prettier": "2.2.1",
     "tailwindcss": "^2.0.2",
