--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/tailwind": "^3.1.2",
+    "astro": "^2.4.5",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
