--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.2",
     "astro": "^2.4.5",
     "tailwindcss": "^3.3.2"
+  },
+  "lint-staged": {
+    "*.{.ts,js,astro}": "eslint --fix",
+    "*.{.ts,js,astro,md,cjs,mjs}": "prettier --write"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -25,6 +30,8 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.1",
     "typescript": "^5.0.4"
