--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^3.1.2",
     "astro": "^2.4.5",
+    "preline": "^1.8.0",
     "tailwindcss": "^3.3.2"
   },
   "lint-staged": {
