--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "*.{.ts,js,astro,md,cjs,mjs}": "prettier --write"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
