--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.2",
+    "@fontsource/fira-sans": "^5.0.2",
     "@fontsource/permanent-marker": "^5.0.1",
     "astro": "^2.4.5",
     "preline": "^1.8.0",
