--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.19.6",
     "@astrojs/tailwind": "^3.1.2",
     "@fontsource/fira-sans": "^5.0.2",
     "@fontsource/permanent-marker": "^5.0.1",
