--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/fira-sans": "^5.0.2",
     "@fontsource/permanent-marker": "^5.0.1",
     "astro": "^2.4.5",
+    "astro-icon": "^0.8.1",
     "preline": "^1.8.0",
     "tailwindcss": "^3.3.2"
   },
